CHANGES
*******

0.2 (unreleased)
================

- Nothing changed yet.


0.1 (2015-04-09)
================

- Initial public release.